--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Bienvenu sur mon site</h1>
+        <p>un nouveau paragraphe</p>
         <h2>Apprendre</h2>
         <h3>Découvrir</h3>
         <h4>Créer</h4>
