--- a/index.html
+++ b/index.html
@@ -6,7 +6,29 @@
     </head>
     <body>
         <h1>Bienvenu sur mon site</h1>
+
         <p>un nouveau paragraphe</p>
+        <ol>
+            <li>Html</li>
+            <li>css</li>
+            <li>js</li>
+        </ol>
+        <ul>
+            <li>Macos</li>
+            <li>Windows</li>
+            <li>Lunix</li>
+        </ul>
+        <p>Bonjour Eliezer,
+            Votre site leexemple.wordpress.com
+             existe déjà depuis près de six semaines
+              et nous souhaiterions prendre quelques
+               instants pour nous assurer que tout se passe bien.
+            Nous savons que la création d’un site Web requiert
+             du temps et de l’énergie, et nous espérons que
+              vous avez toujours assez de détermination pour
+               atteindre vos objectifs !
+        </p>
+
         <h2>Apprendre</h2>
         <h3>Découvrir</h3>
         <h4>Créer</h4>
