--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             <li>Html</li>
             <li>css</li>
             <li>js</li>
+            <ul>
+                <li>boss</li>
+                <li>big</li>
+            </ul>
         </ol>
         <ul>
             <li>Macos</li>
@@ -19,20 +23,14 @@
             <li>Lunix</li>
         </ul>
         <p>Bonjour Eliezer,
-            Votre site leexemple.wordpress.com
-             existe déjà depuis près de six semaines
-              et nous souhaiterions prendre quelques
-               instants pour nous assurer que tout se passe bien.
-            Nous savons que la création d’un site Web requiert
-             du temps et de l’énergie, et nous espérons que
-              vous avez toujours assez de détermination pour
+            Votre site leexemple.wordpress.com <br>
+             existe déjà depuis près de six semaines <br>
+              et nous souhaiterions prendre quelques <br>
+               instants pour nous assurer que tout se passe bien. <br>
+            Nous savons que la création d’un site Web requiert <br>
+             du temps et de l’énergie, et nous espérons que <br>
+              vous avez toujours assez de détermination pour <br>
                atteindre vos objectifs !
         </p>
-
-        <h2>Apprendre</h2>
-        <h3>Découvrir</h3>
-        <h4>Créer</h4>
-        <h5>Partager</h5>
-        <h6>Innover</h6>
     </body>
 </html>
