ajout photo et lien

--- a/contact.html
+++ b/contact.html
@@ -1,28 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mon premier site web</title>
         <meta charset="utf-8">
+        <title>Mon deuxième page</title>
     </head>
     <body>
-        <h1>Bienvenu sur mon site</h1>
-
-        <p>un nouveau paragraphe</p>
-        <a href="contact.html">Me contacter</a>
-        <ol>
-            <li>Html</li>
-            <li>css</li>
-            <li>js</li>
-            <ul>
-                <li>boss</li>
-                <li>big</li>
-            </ul>
-        </ol>
-        <ul>
-            <li>Macos</li>
-            <li>Windows</li>
-            <li>Lunix</li>
-        </ul>
+        <h1>2ème page</h1>
         <p>Bonjour Eliezer,
             Votre site leexemple.wordpress.com <br>
             existe déjà depuis près de six semaines <br>
@@ -33,6 +16,8 @@
             vous avez toujours assez de détermination pour <br>
             atteindre vos objectifs !
         </p>
-        <a href="https://letecode.com">Savoir plus</a>
+        <a href="index.html">Retour à l'accueil</a>
+        <img width="100px" src="images/WhatsApp Image 2022-10-20 at 16.34.35.jpeg" alt="">
+        <img width="100px" src="images/WhatsApp Image 2022-10-20 at 16.34.35.jpeg" alt="">
     </body>
 </html>
