--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Mon deuxième page</title>
+        <style>
+            h1 {
+                color: red;
+            }
+        </style>
     </head>
     <body>
         <h1>2ème page</h1>
