--- a/index.html
+++ b/index.html
@@ -3,36 +3,22 @@
     <head>
         <title>Mon premier site web</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Bienvenu sur mon site</h1>
+        <a href="#">Identité</a>
+        <a href="etudes.html">Etudes</a>
+        <a href="#">Me contacter</a>
 
-        <p>un nouveau paragraphe</p>
-        <a href="contact.html">Me contacter</a>
-        <ol>
-            <li>Html</li>
-            <li>css</li>
-            <li>js</li>
-            <ul>
-                <li>boss</li>
-                <li>big</li>
-            </ul>
-        </ol>
-        <ul>
-            <li>Macos</li>
-            <li>Windows</li>
-            <li>Lunix</li>
-        </ul>
-        <p>Bonjour Eliezer,
-            Votre site leexemple.wordpress.com <br>
-            existe déjà depuis près de six semaines <br>
-            et nous souhaiterions prendre quelques <br>
-            instants pour nous assurer que tout se passe bien. <br>
-            Nous savons que la création d’un site Web requiert <br>
-            du temps et de l’énergie, et nous espérons que <br>
-            vous avez toujours assez de détermination pour <br>
-            atteindre vos objectifs !
+        <h1>Mes informations</h1>
+        <p>Nom : EFOYA <br>
+           Prénom : ELIEZER <br>
+           Date et lieu de naissance : 26 Janvier 2002, Mbandaka <br>
+           Nationalité : Congolaise <br>
+           Etat civil : Celibataire <br>
+           Adresse : Av/Croix-rouge, N/22, Q/Mozindo, C/Barumbu, Kinshasa <br>
+           Téléphone : 0829318798 <br>
+           Email : eliezerefoya2018@gmail.com <br>       
         </p>
-        <a href="https://letecode.com">Savoir plus</a>
     </body>
 </html>
