ajout des modifs au portfolio

--- a/contact.html
+++ b/contact.html
@@ -1,28 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Mon premier site web</title>
         <meta charset="utf-8">
-        <title>Mon deuxième page</title>
-        <style>
-            h1 {
-                color: red;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
-    <body>
-        <h1>2ème page</h1>
-        <p>Bonjour Eliezer,
-            Votre site leexemple.wordpress.com <br>
-            existe déjà depuis près de six semaines <br>
-            et nous souhaiterions prendre quelques <br>
-            instants pour nous assurer que tout se passe bien. <br>
-            Nous savons que la création d’un site Web requiert <br>
-            du temps et de l’énergie, et nous espérons que <br>
-            vous avez toujours assez de détermination pour <br>
-            atteindre vos objectifs !
-        </p>
-        <a href="index.html">Retour à l'accueil</a>
-        <img width="100px" src="images/WhatsApp Image 2022-10-20 at 16.34.35.jpeg" alt="">
-        <img width="100px" src="images/WhatsApp Image 2022-10-20 at 16.34.35.jpeg" alt="">
+    <body id="body1">
+        <div class="barre">
+            <a href="index.html">Identité</a>
+            <a href="etudes.html">Etudes</a>
+            <a href="contact.html">Contacter</a>
+        </div>
+
+        <h1>Pour me Contacter...</h1>
+
+        
+
+        
     </body>
 </html>
