--- a/etudes.html
+++ b/etudes.html
@@ -6,22 +6,113 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <a href="index.html">Identité</a>
-        <a href="etudes.html">Etudes</a>
-        <a href="#">Me contacter</a>
+        <div class="barre">
+            <a href="index.html">Identité</a>
+            <a href="etudes.html">Etudes</a>
+            <a href="contact.html">Contacter</a>
+        </div>
 
         <h1>Mes etudes</h1>
-        <p>     
-            <p>Bonjour Eliezer,
-                Votre site leexemple.wordpress.com <br>
-                existe déjà depuis près de six semaines <br>
-                et nous souhaiterions prendre quelques <br>
-                instants pour nous assurer que tout se passe bien. <br>
-                Nous savons que la création d’un site Web requiert <br>
-                du temps et de l’énergie, et nous espérons que <br>
-                vous avez toujours assez de détermination pour <br>
-                atteindre vos objectifs !
-            </p>
+        <p class="p-2">    
+            Bonjour Eliezer,
+            Votre site leexemple.wordpress.com 
+            existe déjà depuis près de six semaines 
+            et nous souhaiterions prendre quelques 
+            instants pour nous assurer que tout se passe bien. 
+            Nous savons que la création d’un site Web requiert 
+            du temps et de l’énergie, et nous espérons que 
+            vous avez toujours assez de détermination pour 
+            atteindre vos objectifs !
+            Votre site leexemple.wordpress.com 
+            existe déjà depuis près de six semaines 
+            et nous souhaiterions prendre quelques 
+            instants pour nous assurer que tout se passe bien. 
+            Nous savons que la création d’un site Web requiert 
+            du temps et de l’énergie, et nous espérons que 
+            vous avez toujours assez de détermination pour 
+            atteindre vos objectifs !
+            Votre site leexemple.wordpress.com 
+            existe déjà depuis près de six semaines 
+            et nous souhaiterions prendre quelques 
+            instants pour nous assurer que tout se passe bien. 
+            Nous savons que la création d’un site Web requiert 
+            du temps et de l’énergie, et nous espérons que 
+            vous avez toujours assez de détermination pour 
+            atteindre vos objectifs !
         </p>
+        <p class="p-2">    
+            Bonjour Eliezer,
+            Votre site leexemple.wordpress.com 
+            existe déjà depuis près de six semaines 
+            et nous souhaiterions prendre quelques 
+            instants pour nous assurer que tout se passe bien. 
+            Nous savons que la création d’un site Web requiert 
+            du temps et de l’énergie, et nous espérons que 
+            vous avez toujours assez de détermination pour 
+            atteindre vos objectifs !
+            Votre site leexemple.wordpress.com 
+            existe déjà depuis près de six semaines 
+            et nous souhaiterions prendre quelques 
+            instants pour nous assurer que tout se passe bien. 
+            Nous savons que la création d’un site Web requiert 
+            du temps et de l’énergie, et nous espérons que 
+            vous avez toujours assez de détermination pour 
+            atteindre vos objectifs !
+            Votre site leexemple.wordpress.com 
+            existe déjà depuis près de six semaines 
+            et nous souhaiterions prendre quelques 
+            instants pour nous assurer que tout se passe bien. 
+            Nous savons que la création d’un site Web requiert 
+            du temps et de l’énergie, et nous espérons que 
+            vous avez toujours assez de détermination pour 
+            atteindre vos objectifs !
+        </p>
+        <p class="p-2">    
+            Bonjour Eliezer,
+            Votre site leexemple.wordpress.com 
+            existe déjà depuis près de six semaines 
+            et nous souhaiterions prendre quelques 
+            instants pour nous assurer que tout se passe bien. 
+            Nous savons que la création d’un site Web requiert 
+            du temps et de l’énergie, et nous espérons que 
+            vous avez toujours assez de détermination pour 
+            atteindre vos objectifs !
+            Votre site leexemple.wordpress.com 
+            existe déjà depuis près de six semaines 
+            et nous souhaiterions prendre quelques 
+            instants pour nous assurer que tout se passe bien. 
+            Nous savons que la création d’un site Web requiert 
+            du temps et de l’énergie, et nous espérons que 
+            vous avez toujours assez de détermination pour 
+            atteindre vos objectifs !
+            Votre site leexemple.wordpress.com 
+            existe déjà depuis près de six semaines 
+            et nous souhaiterions prendre quelques 
+            instants pour nous assurer que tout se passe bien. 
+            Nous savons que la création d’un site Web requiert 
+            du temps et de l’énergie, et nous espérons que 
+            vous avez toujours assez de détermination pour 
+            atteindre vos objectifs !
+        </p>
+        <p class="p-2">    
+            Bonjour Eliezer,
+            Votre site leexemple.wordpress.com 
+            existe déjà depuis près de six semaines 
+            et nous souhaiterions prendre quelques 
+            instants pour nous assurer que tout se passe bien. 
+            Nous savons que la création d’un site Web requiert 
+            du temps et de l’énergie, et nous espérons que 
+            vous avez toujours assez de détermination pour 
+            atteindre vos objectifs !
+            Votre site leexemple.wordpress.com 
+            existe déjà depuis près de six semaines 
+            et nous souhaiterions prendre quelques 
+            instants pour nous assurer que tout se passe bien. 
+            Nous savons que la création d’un site Web requiert 
+            du temps et de l’énergie, et nous espérons que 
+            vous avez toujours assez de détermination pour 
+            atteindre vos objectifs !
+        </p>
+        <img src="images/unikin.jpeg" alt="photo université" id="unikin">
     </body>
 </html>
