--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
-        <a href="#">Identité</a>
-        <a href="etudes.html">Etudes</a>
-        <a href="#">Me contacter</a>
+    <body id="body1">
+        <div class="barre">
+            <a href="index.html">Identité</a>
+            <a href="etudes.html">Etudes</a>
+            <a href="contact.html">Contacter</a>
+        </div>
 
         <h1>Mes informations</h1>
-        <p>Nom : EFOYA <br>
+
+        <img src="images/efy.jpeg" alt="Ma photo" id="photo-efy">
+
+        <p id="infos">Nom : EFOYA <br>
            Prénom : ELIEZER <br>
            Date et lieu de naissance : 26 Janvier 2002, Mbandaka <br>
            Nationalité : Congolaise <br>
@@ -19,6 +24,9 @@
            Adresse : Av/Croix-rouge, N/22, Q/Mozindo, C/Barumbu, Kinshasa <br>
            Téléphone : 0829318798 <br>
            Email : eliezerefoya2018@gmail.com <br>       
+        </p>
+        <p id="guide">
+            Pour plus des informations cliquez sur <small>"Etudes"</small> à la barre de tache.
         </p>
     </body>
 </html>
