--- a/contact.html
+++ b/contact.html
@@ -7,14 +7,28 @@
     </head>
     <body id="body1">
         <div class="barre">
-            <a href="index.html">Identité</a>
-            <a href="etudes.html">Etudes</a>
-            <a href="contact.html">Contacter</a>
+            <a class="tachebare" href="index.html">Identité</a>
+            <a class="tachebare" href="etudes.html">Etudes</a>
+            <a class="tachebare" href="contact.html">Contacter</a>
         </div>
 
-        <h1>Pour me Contacter...</h1>
+        <h1 style="color: red;">Pour me Contacter...</h1>
 
-        
+
+        <ol>
+            <li id="li1"><a id="Email" href="mailto:eliezerefoya2018@gmail.com">Email</a></li>
+            <hr>
+            <li id="li2"><a id="Instagram" href="https://www.instagram.com">Instagram</a></li>
+            <hr>
+            <li id="li3"><a id="Facebook" href="https://www.facebook.com">Facebook</a></li>
+            <hr>
+            <li id="li4"><a id="Twitter" href="https://www.twitter.com">Twitter</a></li>
+            <hr>
+            <li id="li5"><a id="Whatsapp" href="https://www.whatsapp.com">Whatsapp</a></li>
+            <hr>
+            <li id="li6"><a id="t243829318798" href="tel:+243829318798">243829318798</a></li>
+        </ol>
+
 
         
     </body>
