--- a/etudes.html
+++ b/etudes.html
@@ -7,12 +7,12 @@
     </head>
     <body>
         <div class="barre">
-            <a href="index.html">Identité</a>
-            <a href="etudes.html">Etudes</a>
-            <a href="contact.html">Contacter</a>
+            <a class="tachebare" href="index.html">Identité</a>
+            <a class="tachebare" href="etudes.html">Etudes</a>
+            <a class="tachebare" href="contact.html">Contacter</a>
         </div>
 
-        <h1>Mes etudes</h1>
+        <h1 style="color: green;">Mes etudes</h1>
         <p class="p-2">    
             Bonjour Eliezer,
             Votre site leexemple.wordpress.com 
