--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mon premier site web</title>
+        <title>Mon portefolio</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
     </head>
     <body id="body1">
         <div class="barre">
-            <a href="index.html">Identité</a>
-            <a href="etudes.html">Etudes</a>
-            <a href="contact.html">Contacter</a>
+            <a class="tachebare" href="index.html">Identité</a>
+            <a class="tachebare" href="etudes.html">Etudes</a>
+            <a class="tachebare" href="contact.html">Contacter</a>
         </div>
 
-        <h1>Mes informations</h1>
+        <h1 style="color: rgb(255, 153, 0);">Mes informations</h1>
 
         <img src="images/efy.jpeg" alt="Ma photo" id="photo-efy">
 
@@ -26,7 +26,7 @@
            Email : eliezerefoya2018@gmail.com <br>       
         </p>
         <p id="guide">
-            Pour plus des informations cliquez sur <small>"Etudes"</small> à la barre de tache.
+            Pour plus d'information cliquez sur <small>"Etudes"</small> à la barre de tache.
         </p>
     </body>
 </html>
