--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a class="tachebare" href="contact.html">Contacter</a>
         </div>
 
-        <h1 style="color: rgb(255, 153, 0);">Mes informations</h1>
+        <h1 style="color: rgb(190, 131, 42);">Mes informations</h1>
 
         <img src="images/efy.jpeg" alt="Ma photo" id="photo-efy">
 
@@ -24,6 +24,22 @@
            Adresse : Av/Croix-rouge, N/22, Q/Mozindo, C/Barumbu, Kinshasa <br>
            Téléphone : 0829318798 <br>
            Email : eliezerefoya2018@gmail.com <br>       
+        </p>
+        <h2 style="color: rgba(59, 36, 2, 0.791);">* Langues parlées :</h2>
+
+        <p id="info">
+            - Français <br>
+            - Lingala
+        </p>
+        <h3 style="color: rgb(143, 86, 0);">* Formations :</h3>
+
+        <p id="inf">
+            - Programmation web
+        </p>
+        <h4 style="color: rgb(0, 43, 3);">* Expériences professionelles :</h4>
+
+        <p id="in">
+            - aucune
         </p>
         <p id="guide">
             Pour plus d'information cliquez sur <small>"Etudes"</small> à la barre de tache.
