encore modif portefolio

--- a/contact.html
+++ b/contact.html
@@ -16,15 +16,15 @@
 
 
         <ol>
-            <li id="li1"><a id="Email" style="text-decoration: none;" href="mailto:eliezerefoya2018@gmail.com">Email</a></li>
+            <li id="li1"><a id="Email" style="text-decoration: none;" href="mailto:eliezerefoya2018@gmail.com">Email</a></li><br>
             <hr><br>
-            <li id="li2"><a id="Instagram" style="text-decoration: none;" href="https://www.instagram.com">Instagram</a></li>
+            <li id="li2"><a id="Instagram" style="text-decoration: none;" href="https://www.instagram.com">Instagram</a></li><br>
             <hr><br>
-            <li id="li3"><a id="Facebook" style="text-decoration: none;" href="https://www.facebook.com">Facebook</a></li>
+            <li id="li3"><a id="Facebook" style="text-decoration: none;" href="https://www.facebook.com">Facebook</a></li><br>
             <hr><br>
-            <li id="li4"><a id="Twitter" style="text-decoration: none;" href="https://www.twitter.com">Twitter</a></li>
+            <li id="li4"><a id="Twitter" style="text-decoration: none;" href="https://www.twitter.com">Twitter</a></li><br>
             <hr><br>
-            <li id="li5"><a id="Whatsapp" style="text-decoration: none;" href="https://www.whatsapp.com">Whatsapp</a></li>
+            <li id="li5"><a id="Whatsapp" style="text-decoration: none;" href="https://www.whatsapp.com">Whatsapp</a></li><br>
             <hr><br>
             <li id="li6"><a id="t243829318798" style="text-decoration: none;" href="tel:+243829318798">Appel</a></li>
         </ol>
