--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a class="tachebare" href="contact.html">Contacter</a>
         </div>
 
-        <h1 style="color: rgb(190, 131, 42);">Mes informations</h1>
+        <h1 class="principal-h1">Mes informations</h1>
 
         <img src="images/efy.jpeg" alt="Ma photo" id="photo-efy">
 
@@ -25,18 +25,18 @@
            Téléphone : 0829318798 <br>
            Email : eliezerefoya2018@gmail.com <br>       
         </p>
-        <h2 style="color: rgba(59, 36, 2, 0.791);">* Langues parlées :</h2>
+        <h1 class="h1-langue">* Langues parlées :</h1>
 
         <p id="info">
             - Français <br>
             - Lingala
         </p>
-        <h3 style="color: rgb(143, 86, 0);">* Formations :</h3>
+        <h1 class="h1-formation">* Formations :</h1>
 
         <p id="inf">
             - Programmation web
         </p>
-        <h4 style="color: rgb(0, 43, 3);">* Expériences professionelles :</h4>
+        <h1 class="h1-exp">* Expériences professionelles :</h1>
 
         <p id="in">
             - aucune
