--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
             <a class="tachebare" href="contact.html">Contacter</a>
         </div>
 
-        <h1 class="principal-h1-3">Pour me Contacter...</h1>
+        <h1 class="principal-h1-3">Pour me Contacter...</h1><br><br><br>
 
 
         <ol>
