--- a/etudes.html
+++ b/etudes.html
@@ -12,7 +12,8 @@
             <a class="tachebare" href="contact.html">Contacter</a>
         </div>
 
-        <h1 class="principal-h1-2">Mes etudes</h1>
+        <h1 class="principal-h1-2">Mes etudes</h1><br><br>
+        
         <p class="p-2">    
             Bonjour Eliezer,
             Votre site leexemple.wordpress.com 
